<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="ch.epfl.sweng.project.Fragments.ChallengeDialogFragment"
             android:id="@+id/define_challenge"
             android:background="@color/backgroundApp">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                style="@style/RadioButton"
                android:checked="false"
                android:textSize="20sp"
                android:id="@+id/distance_radio"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/time"
                style="@style/RadioButton"
                android:textSize="20sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:id="@+id/time_radio"
                android:layout_weight="1"/>

        </info.hoang8f.android.segmented.SegmentedGroup>

        <LinearLayout
            android:orientation="horizontal"
...
            android:layout_marginTop="20dp">

            <Button
                android:text="@android:string/cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:id="@+id/customize_negative_btn"
                android:layout_weight="1"
                android:background="@drawable/layout_rounded_corners"
                android:textColor="@android:color/white"
                android:elevation="24dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="40dp"
                android:textAllCaps="false"/>

            <Button
                android:text="@string/challenge"
                android:layout_height="40dp"
                android:id="@+id/customize_positive_btn"
                android:layout_weight="1"
                android:background="@drawable/button_shape_green"
                android:elevation="24dp"
                android:layout_width="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="40dp"
...
