<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_head_small"
            android:title="@string/profile_tab" />
        <item
            android:id="@+id/nav_run"
            android:icon="@drawable/running_man_white"
            android:title="@string/run_tab" />
        <item
            android:id="@+id/nav_new_challenge"
            android:icon="@drawable/challenge_small"
            android:title="@string/new_challenge" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/messages_icon"
            android:title="@string/challenges" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_icon"
            android:title="@string/history" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_close_light"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
