<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context="ch.epfl.sweng.project.Fragments.ReceiveChallengeDialogFragment"
             android:id="@+id/request_layout"
             android:background="@color/backgroundApp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
...
            android:layout_marginBottom="10dp">

            <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/cancel_btn"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/layout_rounded_corners"
                android:elevation="24dp"
                android:textColor="@android:color/white"/>

            <Button
                android:text="@string/decline"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/decline_btn"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@drawable/layout_rounded_corners"
                android:elevation="24dp"
                android:textColor="@android:color/white"/>

            <Button
                android:text="@string/accept"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/accept_btn"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:layout_marginRight="15dp"
                android:elevation="24dp"
                android:background="@drawable/button_shape_green"
                android:layout_marginLeft="10dp"/>
...
