...
            >

            <Button
                android:text="@android:string/cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:id="@+id/schedule_negative_btn"
                android:layout_weight="1"
                android:background="@drawable/layout_rounded_corners"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp"
                android:textColor="@android:color/white"
                android:elevation="24dp"
                android:textAllCaps="false"/>

            <Button
                android:text="@string/schedule"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:id="@+id/schedule_positive_btn"
                android:layout_weight="1"
                android:background="@drawable/button_shape_green"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginLeft="25dp"
...
